2013-04-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mml.el (mml-minibuffer-read-description): Use `default' insted of
	`initial-input' for the argument name.
	Suggested by Stefan Monnier <monnier@iro.umontreal.ca>.

2013-04-03  Kevin Layer  <layer@known.net>  (tiny change)

	* mml.el (mml-minibuffer-read-description): Allow passing in a prefix
	(used by MH-E).

2013-04-01  Andrew Cohen  <cohen@bu.edu>

	* nnir.el (nnir-request-update-mark): Improve mark updating in original
	group.

	* gnus-msg.el (nnir-article-number, nnir-article-group): Autoload to
	fix compilation.

2013-03-31  Andrew Cohen  <cohen@bu.edu>

	* nnir.el (nnir-method-default-engines): And another typo.

2013-03-30  Andrew Cohen  <cohen@bu.edu>

	* nnir.el (nnir-method-default-engines): Fix typo.

2013-03-29  Andrew Cohen  <cohen@bu.edu>

	* nnir.el: Define 'number-sequence for xemacs.
	(gnus-summary-create-nnir-group): New function to create an nnir group
	from an nnir summary buffer based on the current query.
	(nnir-request-create-group): Update to allow nnir group creation based
	on the current query.

2013-03-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nndraft.el (nndraft-request-expire-articles):
	Make expiry target always `delete'.

2013-03-27  Andrew Cohen  <cohen@bu.edu>

	* gnus-msg.el (gnus-setup-message): When replying from an nnir summary
	buffer use the posting-style and gcc of the original article group.
	(gnus-inews-insert-gcc): Don't set gcc-self for virtual groups.

	* nnir.el: Fix byte-compile warning. nnoo-define-skeleton should come
	after other deffoos.

2013-03-25  Andrew Cohen  <cohen@bu.edu>

	* nnir.el: Major rewrite. Cleaner separation between searches and group
	management. Marks are now shown in nnir summary buffers. Rudimentary
	support for real (i.e. not ephemeral) nnir groups.
	(gnus-summary-make-nnir-group): New function for initiating searches
	from a summary buffer.

2013-03-18  Sam Steingold  <sds@gnu.org>

	* message.el (message-bury): Minor cleanup.
